hack/manifests/testing/parodos-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-service
spec:
  template:
    spec:
      containers:
      - name: workflow-service
        imagePullPolicy: IfNotPresent
