hack/manifests/testing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parodos-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /workflow-service
        backend:
          service:
            name: workflow-service
            port:
              number: 8080
      - pathType: Prefix
        path: /notification-service
        backend:
          service:
            name: notification-service
            port:
              number: 8080
